argocd/ingresses/crc-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crc-ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt
spec:
  # tls:
  #   - hosts: 
  #     - imkumpy.com
  #     secretName: imkumpy-tls-cert
  ingressClassName: nginx
  rules:
    - host: imkumpy.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crc-service
              port: 
                number: 80
